--- a/src/components/atoms/educationDecoration/educationDecoration.css
+++ b/src/components/atoms/educationDecoration/educationDecoration.css
@@ -30,5 +30,6 @@
     height: 280px;
     width: 100%;
     min-width: 200px;
+    margin-right: 100px;
   }
 }
